<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Story App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="create_an_account">Create an Account</string>
    <string name="name">Name</string>
    <string name="register">Create an Account</string>
    <string name="register_now">Register Now</string>
    <string name="login">Login</string>
    <string name="minlength" tools:ignore="PluralsCandidate">Password must be at least %1$d characters</string>
    <string name="required">This field is Required</string>
    <string name="not_valid_email">This is not a valid email</string>
    <string name="log_out">Logout</string>
    <string name="story_images">Story images</string>
    <string name="add_new_story">Add new story</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="oops">Oops, something went wrong!</string>
    <string name="success_register">Register successfully, please login to continue</string>
    <string name="failed_open_camera">Failed to open the camera</string>
    <string name="failed_take_photo">Failed to take photo</string>
    <string name="failed_get_persmission">Failed to get a permission</string>
    <string name="choose_picture">Choose a picture</string>
    <string name="choose_image_warn">Please choose image file firstly</string>
    <string name="upload_success">Successfully uploaded image</string>
    <string name="please_activate_location_message">Please activate your location services</string>
    <string name="location_permission_denied">Location permission not allowed</string>
    <string name="location_permission_denied_action">Change Setting</string>
    <string name="style_map_failed">Style parsing failed</string>
    <string name="style_map_error">Can\'t find style. Error: %s</string>
    <string name="maps">Maps</string>
    <string name="share_location">Share location?</string>
    <string name="go_retry">Retry</string>
    <string name="story_created_by">Story created by:</string>
    <string name="title_menu_1">Tambahkan Story</string>
    <string name="desc_menu_1">Kini kamu bisa menambahkan story lewat StoryApp</string>
    <string name="title_menu_2">Lihat Story</string>
    <string name="desc_menu_2">Kamu bisa melihat story dan komentar orang lain</string>
    <string name="title_menu_3">Bagikan Story</string>
    <string name="desc_menu_3">Unggah story kamu agar orang lain tahu kegiatanmu</string>
    <string name="title_menu_4">Mulai Sekarang</string>
    <string name="desc_menu_4">Unggah story pertamamu disini</string>
    <string name="start">Masuk Aplikasi</string>
</resources>