<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    android:label="@string/maps"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.asep.storyapp.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_storyDetailFragment"
            app:destination="@id/storyDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@android:anim/slide_out_right"
            app:popExitAnim="@android:anim/slide_out_right" />
        <action
            android:id="@+id/action_homeFragment_to_storyAddActivity"
            app:destination="@id/storyAddActivity" />
        <action
            android:id="@+id/action_homeFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:enterAnim="@anim/slide_out_left"
            app:popExitAnim="@anim/slide_out_left"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_homeFragment_to_mapsFragment"
            app:destination="@id/mapsFragment" />
    </fragment>
    <fragment
        android:id="@+id/storyDetailFragment"
        android:name="com.asep.storyapp.ui.storydetail.StoryDetailFragment"
        android:label="Story Detail"
        tools:layout="@layout/fragment_story_detail">
        <argument
            android:name="story"
            app:argType="com.asep.storyapp.ui.domain.model.Story" />
    </fragment>
    <activity
        android:id="@+id/storyAddActivity"
        android:name="com.asep.storyapp.ui.storyadd.StoryAddActivity"
        android:label="activity_story_add"
        tools:layout="@layout/activity_story_add" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.asep.storyapp.ui.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.asep.storyapp.ui.register.RegisterFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_registerFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/mapsFragment"
        android:name="com.asep.storyapp.ui.maps.MapsFragment"
        android:label="@string/maps" />
</navigation>