<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <data>
        <variable
            name="Story"
            type="com.asep.storyapp.data.domain.model.Story" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        app:cardCornerRadius="@dimen/side_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/half_side_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_item_photo"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/story_images"
                android:scaleType="fitXY"
                tools:src="@drawable/logo_story_app"
                app:imageUrl="@{Story.photoUrl}"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/half_side_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:text="@string/story_created_by" />

                <TextView
                    android:id="@+id/tv_item_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:text="@{Story.name}"
                    tools:text="@string/app_name"
                    app:drawableLeftCompat="@drawable/ic_person" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>