<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.asep.storyapp.ui.login.LoginFragment">

    <data>
        <variable
            name="viewModel"
            type="com.asep.storyapp.ui.login.LoginViewModel" />

        <variable
            name="loginFragment"
            type="com.asep.storyapp.ui.login.LoginFragment" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/linear_progress_indicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="gone"
                app:indicatorColor="@color/teal_200" />

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_login_logo"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/description"
                    android:src="@drawable/storyapp"
                    android:layout_marginTop="120dp"
                    android:alpha="0"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/login_email"
                    app:layout_constraintVertical_chainStyle="packed" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_email"
                    style="@style/Widget.StoryApp.TextInputLayout.OutlinedBox"
                    android:layout_margin="@dimen/side_margin"
                    android:alpha="0"
                    android:hint="@string/email"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/img_login_logo"
                    app:layout_constraintTop_toBottomOf="@+id/img_login_logo"
                    app:startIconDrawable="@drawable/ic_email">

                    <com.asep.storyapp.customview.EmailEditText
                        android:id="@+id/ed_login_email"
                        style="@style/TextInputEditText"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_password"
                    style="@style/Widget.StoryApp.TextInputLayout.OutlinedBox"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:alpha="0"
                    android:hint="@string/password"
                    app:endIconMode="password_toggle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/login_email"
                    app:layout_constraintTop_toBottomOf="@+id/login_email"
                    app:startIconDrawable="@drawable/ic_lock">

                    <com.asep.storyapp.customview.PasswordEditText
                        android:id="@+id/ed_login_password"
                        style="@style/TextInputEditText"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:alpha="0"
                    android:onClick="@{() -> loginFragment.signIn()}"
                    android:text="@string/sign_in"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/navi"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/login_password" />

                <LinearLayout
                    android:id="@+id/lnr_not_registered"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:alpha="0"
                    android:orientation="horizontal"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintStart_toStartOf="@+id/btn_sign_in"
                    app:layout_constraintTop_toBottomOf="@+id/btn_sign_in">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/not_registered_yet" />

                    <TextView
                        android:id="@+id/tv_create_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:minHeight="48dp"
                        android:onClick="@{() -> loginFragment.goToRegisterScreen()}"
                        android:text="@string/create_an_account"
                        android:textColor="@color/purple_500" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>

