<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.asep.storyapp.ui.register.RegisterFragment">

    <data>
        <variable
            name="viewModel"
            type="com.asep.storyapp.ui.register.RegisterViewModel" />

        <variable
            name="registerFragment"
            type="com.asep.storyapp.ui.register.RegisterFragment" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/linear_progress_indicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="gone"
                app:indicatorColor="@color/teal_200" />

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".ui.register.RegisterFragment">

                <TextView
                    android:id="@+id/tv_register"
                    style="@style/Widget.StoryApp.TextView.BigTitle"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:textSize="32sp"
                    android:alpha="1"
                    android:text="@string/register"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/img_logo"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:alpha="0"
                    android:contentDescription="@string/description"
                    android:scaleType="centerCrop"
                    android:src="@drawable/storyapp"
                    app:layout_constraintBottom_toTopOf="@id/register_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_register"
                    app:layout_constraintVertical_chainStyle="packed" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_name"
                    style="@style/Widget.StoryApp.TextInputLayout.OutlinedBox"
                    android:layout_margin="@dimen/side_margin"
                    android:hint="@string/name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_logo"
                    app:startIconDrawable="@drawable/ic_baseline_person_24"
                    android:alpha="0">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_register_name"
                        style="@style/TextInputEditText"
                        android:inputType="textPersonName" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_email"
                    style="@style/Widget.StoryApp.TextInputLayout.OutlinedBox"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/email"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/register_name"
                    app:startIconDrawable="@drawable/ic_baseline_email_24"
                    android:alpha="0">

                    <com.asep.storyapp.customview.EmailEditText
                        android:id="@+id/ed_register_email"
                        style="@style/TextInputEditText"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_password"
                    style="@style/Widget.StoryApp.TextInputLayout.OutlinedBox"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/register_email"
                    app:passwordToggleEnabled="true"
                    app:startIconDrawable="@drawable/ic_baseline_lock_24"
                    android:alpha="0">

                    <com.asep.storyapp.customview.PasswordEditText
                        android:id="@+id/ed_register_password"
                        style="@style/TextInputEditText"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:onClick="@{() -> registerFragment.register()}"
                    android:text="@string/register_now"
                    android:backgroundTint="@color/navi"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/register_password"
                    android:alpha="0"
                    android:textColor="@color/white"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>